RESOLVED FIXED69126
DFG operation results are not set correctly in JSVALUE32_64 DFG JIT
https://bugs.webkit.org/show_bug.cgi?id=69126
Summary DFG operation results are not set correctly in JSVALUE32_64 DFG JIT
Yuqiang Xian
Reported 2011-09-29 22:21:31 PDT
The setupResults routine has the bug of reversing the source and destination. Also some other trivial (but stupid) bugs need to be fixed in JSVALUE32_64 DFG JIT.
Attachments
the patch (4.66 KB, patch)
2011-09-29 22:24 PDT, Yuqiang Xian
no flags
Yuqiang Xian
Comment 1 2011-09-29 22:24:30 PDT
Created attachment 109250 [details] the patch
WebKit Review Bot
Comment 2 2011-09-30 19:13:42 PDT
Comment on attachment 109250 [details] the patch Clearing flags on attachment: 109250 Committed r96451: <http://trac.webkit.org/changeset/96451>
WebKit Review Bot
Comment 3 2011-09-30 19:13:47 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.